--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
   "name": "first-package",
   "version": "1.0.0",
-  "description": "",
+  "description": "first package",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/manthanank/first-package.git"
+  },
+  "keywords": [
+    "name"
+  ],
+  "author": "manthanank",
   "license": "ISC",
-  "dependencies": {
-    "express": "^4.18.2"
-  }
+  "bugs": {
+    "url": "https://github.com/manthanank/first-package/issues"
+  },
+  "homepage": "https://github.com/manthanank/first-package#readme"
 }
